--- a/bearmax/pubspec.yaml
+++ b/bearmax/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.3.11
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  persistent_bottom_nav_bar: any
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +70,7 @@ flutter:
     - assets/images/face.png
     - assets/images/full.png
     - assets/images/waving_full.png
+    - assets/images/pfp.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
