--- a/bearmax/pubspec.yaml
+++ b/bearmax/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
-  flutter_native_splash: ^2.3.11
+  # flutter_native_splash: ^2.3.11
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   persistent_bottom_nav_bar: any
+  file_picker: ^6.2.0
+  mime: ^1.0.5
+  http_parser: ^4.0.2
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
